--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,15 @@
     <title>Velbase Data Solutions</title>
   </head>
   <body>
+    <script>
+      function initFreshChat() {
+        window.fcWidget.init({
+          token: "4f7bfb3c-bd5e-46f5-80b5-840de2e422f8",
+          host: "https://wchat.freshchat.com"
+        });
+      }
+      function initialize(i,t){var e;i.getElementById(t)?initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,e.src="https://wchat.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}function initiateCall(){initialize(document,"freshchat-js-sdk")}window.addEventListener?window.addEventListener("load",initiateCall,!1):window.attachEvent("load",initiateCall,!1);
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
